--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-md-8">
-      <app-products></app-products>
+      <app-product-list></app-product-list>
     </div>
   </div>
 </div>
