--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,13 @@
 <app-header></app-header>
 
+<div class="container mt-4">
+  <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
+
+<!-- <app-header></app-header>
+
 <div class="container mt-3">
   <div class="row">
     <div class="col-md-8">
@@ -8,4 +16,4 @@
   </div>
 </div>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
