--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -12,4 +12,28 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/about" routerLinkActive="active">About Us</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact Us</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/productList" routerLinkActive="active">Products</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </nav>
